# MediaBiasFactCheckBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MBFC.json  README.md  auto_post_news.md  auto_post_news.py  check_feeds.py  docker-compose.yml  get_summary.py  keep_alive.md  keep_alive.py  main.md  main.py  modmail_discussion.md  modmail_discussion.py  new_main.py  post_with_summaries.py  pyproject.toml  removed.txt  requirements-runtime.txt  requirements.txt  rss_feeds.json  rss_feeds.py  run_tests.sh  summaries.json  temp.py  test_gnews.py  weekly_discussion.md  weekly_discussion.py
docs/: MBFC_modified.json  cleaningMBFC.md  cleaningMBFC.py
scripts/: gemininews.test.py  markdownReverse.py  regex.text.py  reversed_table.md
src/: comment_handler.md  comment_handler.py  config.md  config.py  exceptions.md  exceptions.py  gemini.py  get_latest_news.md  get_latest_news.py  llm_automation.md  llm_automation.py  modmail_handler.md  modmail_handler.py  mongodb.md  mongodb.py  mongodb_streamlit_user.py  mongodb_streamlit_user_analytics.py  perplexity.py  phind_automation.py  reddit_utils.md  reddit_utils.py  submission_handler.md  submission_handler.py  utils.md  utils.py
streamlit/: dashboard.md  gemini.py  llmapi.md  llmapi.py  mongodb.md  mongodb.py  mongodb_streamlit_comments.py  mongodb_streamlit_content_analysis.py  mongodb_streamlit_submissions.py  mongodb_streamlit_subreddit_stats.py  mongodb_streamlit_user.py  mongodb_streamlit_user_analytics.py  phind_automation.py
tests/: abusive.py  abusive.txt  gemini.test.py  gemini2.test.py  gemininews.test.py  (+16 more)
(+56 files in other folders)
